# Spirit_Tower_Proyecto_2

./: .gitignore  Diagrama de clases.drawio  Doxyfile  README.md
Carpeta Assets/: 10.unitypackage  11.unitypackage  12.unitypackage  13.unitypackage  14.unitypackage  15.unitypackage  16.unitypackage  17.unitypackage  18.unitypackage  19.unitypackage  2.unitypackage  20.unitypackage  21.unitypackage  23.unitypackage  27.unitypackage  28.unitypackage  3.unitypackage  4.unitypackage  5.unitypackage  6.unitypackage  7.unitypackage  8.unitypackage  9.unitypackage  Assets_ordenado1.unitypackage  Assets_shak1.0.unitypackage
Cliente(DEFINITIVO)/Cliente/: Cliente.sln  UpgradeLog.htm
Cliente/ConsoleApp1/: ConsoleApp1.sln
ClienteCpp(ejemplo)/: CMakeLists.txt  main.cpp
Genetic/BackUp/: CMakeLists.txt  main.cpp
Genetic/BackUp/Genetic/: Crossbreed.cpp  Crossbreed.h  Entity.cpp  Entity.h  GeneticManager.cpp  GeneticManager.h  LinkedList.h  Selection.cpp  Selection.h  Spectrum.cpp  Spectrum.h
Genetic/BackUp/Tools/: Utility.cpp  Utility.h
Prueba Proyecto 2 Datos II/: Assembly-CSharp.csproj
Server/: CMakeLists.txt  main.cpp
Server/Server/: Server.sln
Server/src/: Bresenham.cpp  Bresenham.h
ServerCPP/: CMakeLists.txt  server.cpp
ServerCPP(DEFINITIVO)/: CMakeLists.txt
ServerCPP(DEFINITIVO)/src/: mainGenetic.cpp  server.cpp  testGenetic.cpp
Unity Project/: Assembly-CSharp.csproj  Unity Project.sln  WanzyeeStudio.Runtime.csproj
UnityProject/: Assembly-CSharp.csproj  Prueba Proyecto 2 Datos II.sln  UnityProject.sln  WanzyeeStudio.Runtime.csproj
(+259 files in other folders)
